[BUGFIX] square the z-index of discount

--- a/src/components/molecules/additional-discount/style.module.css
+++ b/src/components/molecules/additional-discount/style.module.css
@@ -73,7 +73,7 @@
   /* Mismo fondo que el contenedor */
   padding: 20px;
   width: 691px;
-  z-index: 1000;
+  z-index: 11;
   margin-left: 393px;
 }
 
