--- a/src/components/molecules/footer-pooput/styles.module.css
+++ b/src/components/molecules/footer-pooput/styles.module.css
@@ -6,7 +6,7 @@
   padding: 0px 0;
   box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
   font-family: "roboto Regular", sans-serif;
-  z-index: 1000;
+  z-index: 10;
   color: red;
   font-size: 12px;
   margin-top: 30px;
