--- a/src/components/organisms/poput/styles.module.css
+++ b/src/components/organisms/poput/styles.module.css
@@ -7,8 +7,9 @@
     width: 100vw;
     height: 100vh;
     /* UI Properties */
-    background: var(--unnamed-color-1e1045) 0% 0% no-repeat padding-box;
-    background: #1E1045 0% 0% no-repeat padding-box;
+    /* background: var(--unnamed-color-1e1045) 0% 0% no-repeat padding-box; */
+    /* background: #1E1045 0% 0% no-repeat padding-box; */
+    background-color: #1E1045;
     opacity: 0.9;
-    z-index: 0;
+    z-index: 1;
 }
